# perfaware

./: CMakeLists.txt  sim8086.cpp
include/sim8086/: decoder.hpp  utils.hpp
src/: main.cpp
src/decoder/: decoder.cpp
src/utils/: utils.cpp
tests/: CMakeLists.txt  test_decoder.cpp
